# smcalc

./: .gitignore  CMakeLists.txt  README.md
include/: args.h  calc.h  lexer.h  rpn.h
src/: args.cc  calc.cc  lexer.cc  main.cc  rpn.cc
tests/: tests_main.cc
